--- a/sample.html
+++ b/sample.html
@@ -3,12 +3,15 @@
 
 <head>
 <meta charset="UTF-8">
-<title>HTML5 Example by www.techonthenet.com</title>
+  <title>potti</title>
 </head>
 
-<body>
-<h1>Heading 1</h1>
-<p>Press <kbd>Ctrl</kbd>+<kbd>C</kbd> to copy the text.</p>
+<body style="text-align:center;margin-top:10%;margin-left:35%;margin-right:40%;font-family:verdana">
+  <form class="" action="potti.html" method="post">
+  password : <input type="password"  placeholder="Observe hint" autofocus required pattern="(14|fourteen)" title="password=My Mobile Number" >
+  <input type="submit" value=go ><br><br>
+    <figcaption style="font-size:small; color:grey;">Hint : how many dayz u r older than me? </figcaption>
+      </form>
 </body>
 
 </html>
