--- a/sample.html
+++ b/sample.html
@@ -8,7 +8,7 @@
 
 <body style="text-align:center;margin-top:10%;margin-left:35%;margin-right:40%;font-family:verdana">
   <form class="" action="potti.html" method="post">
-  password : <input type="password"  placeholder="Observe hint" autofocus required pattern="(14|fourteen)" title="password=My Mobile Number" >
+  password : <input type="password"  placeholder="Observe hint" autofocus required pattern="(14|fourteen)" title="It is a Number" >
   <input type="submit" value=go ><br><br>
     <figcaption style="font-size:small; color:grey;">Hint : how many dayz u r older than me? </figcaption>
       </form>
