--- a/sample.html
+++ b/sample.html
@@ -7,7 +7,7 @@
 </head>
 
 <body style="text-align:center;margin-top:10%;margin-left:35%;margin-right:40%;font-family:verdana">
-  <form action="https://www.google.com">
+  <form action="https://saikiranchowdarynalamothu.github.io/rey/potti">
   password : <input type="password"  placeholder="Observe hint" autofocus required pattern="(14|fourteen)" title="It is a Number" >
   <input type="submit" value=go ><br><br>
     <figcaption style="font-size:small; color:grey;">Hint : how many dayz u r older than me? </figcaption>
