--- a/potti.html
+++ b/potti.html
@@ -22,6 +22,11 @@
       body
       {
         background:green;
+        background-position:center;
+      }
+      html
+      {
+        html:100%
       }
       </style>
   </head>
@@ -31,7 +36,7 @@
 <font size=5 face=verdana>
       Oh my pottiii</marquee>
 
-<marquee direction="down" style="margin-left:30%;margin-right:30%;"; width=450 height=100  behavior="alternate" scrollamount="3">
+<marquee direction="down" style="margin-left:30%;margin-right:30%;"; width=300 height=100  behavior="alternate" scrollamount="3">
   <marquee direction="left" style="color:white;" behavior="alternate" scrollamount="3">
     <font size=5 face=Arial>
     Love u raa
