--- a/potti.html
+++ b/potti.html
@@ -22,7 +22,7 @@
       }
       body
       {
-        background:green;
+        background:white;
         background-position:center;
       }
       html
@@ -37,13 +37,13 @@
 <font size=5 face=verdana>
       Oh my pottiii</marquee>
 
-<marquee direction="down" style="margin-left:30%;margin-right:30%;"; width=300 height=100  behavior="alternate" scrollamount="3">
+<marquee direction="down"  width=200 height=100  behavior="alternate" scrollamount="3">
   <marquee direction="left" style="color:white;" behavior="alternate" scrollamount="3">
     <font size=5 face=Arial>
     Love u raa
     </marquee>
     </marquee>
-<pre style="background:yellow;color:blue;" wrap >
+<pre style="background:white;color:black;" wrap >
 Firstly niku oka vishayam cheppali ra...Apr 27th interview 2nd round vundi..   idi niku 2days back ae chepdham ani anukunnaaa..  
   apr 24th nunche nitho matladadam anukunnaaaa.....kani...    nenu silent ga vunte em chestavo chudham ani silent ga vunnaaa... 
 
