--- a/potti.html
+++ b/potti.html
@@ -27,13 +27,13 @@
       }
       html
       {
-        html:100%
+        html:100%;
       }
       </style>
   </head>
   <body>
 
-    <marquee height=30 direction="right" style="color:white;background:green;  margin-left:30%; margin-right:30%" >
+    <marquee height=30 direction="right" style="color:white;"  margin-left:30%; margin-right:30%" >
 <font size=5 face=verdana>
       Oh my pottiii</marquee>
 
