--- a/potti.html
+++ b/potti.html
@@ -8,14 +8,12 @@
     <style>
       marquee
       {
-
-        background:green;
-
+      color:green;
         }
-        hr
-        {
-          border:2px solid red;
-        }
+      p{
+        text-align:center;
+      }
+  
       pre
       {
         text-align:justify;
@@ -32,17 +30,19 @@
       </style>
   </head>
   <body>
-
-    <marquee height=30 direction="right" style="color:white;"  margin-left:30%; margin-right:30%" >
+<p>
+    <marquee height=30 direction="right"  style="margin-left:30%; margin-right:30%" >
 <font size=5 face=verdana>
       Oh my pottiii</marquee>
 
-<marquee direction="down"  width=200 height=100  behavior="alternate" scrollamount="3">
-  <marquee direction="left" style="color:white;" behavior="alternate" scrollamount="3">
+<marquee direction="down" height=100 style="margin-left:30%; margin-right:30%"  behavior="alternate" scrollamount="3">
+  <marquee direction="left"  behavior="alternate" scrollamount="3">
     <font size=5 face=Arial>
     Love u raa
     </marquee>
     </marquee>
+</p>
+     
 <pre style="background:white;color:black;" wrap >
 Firstly niku oka vishayam cheppali ra...Apr 27th interview 2nd round vundi..   idi niku 2days back ae chepdham ani anukunnaaa..  
   apr 24th nunche nitho matladadam anukunnaaaa.....kani...    nenu silent ga vunte em chestavo chudham ani silent ga vunnaaa... 
