--- a/add_sub_using_js.html
+++ b/add_sub_using_js.html
@@ -67,7 +67,7 @@
 
 <div>
 
-<font font=25px color=grey bgcolor=red>number 1</font> : <input type="text" id="num1" name="" value="" autofocus autocomplete="off"><br>
+<font font=25px color=grey bgcolor=red>number 1</font> : <input type="text" id="num1" name="" value="" autofocus autocomplete="off"><br><br>
 <font font=25px color=grey bgcolor=red>number 2</font> : <input type="text" id="num2" name="" value="" autocomplete="off"><br><br>
 
 <button onclick="add()">addition</button>&nbsp;&nbsp;
