--- a/add_sub_using_js.html
+++ b/add_sub_using_js.html
@@ -30,15 +30,17 @@
       button
       {
         color:yellow;
+        font-family:"lucida handwriting";
         background-color: black;
-        border-radius: 20%;
+        border-radius: 40%;
         width:100px;
         height:50px;
       }
 
       #num1,#num2
       {
-        border:2px solid maroon;
+        border:4px solid #84f542;
+        color:#5e155b;
       }
 
       div
@@ -55,7 +57,7 @@
   </head>
   <body>
 
-<marquee direction="left" behavior="alternate" scrollamount="2">
+<marquee direction="right"  behavior="alternate" scrollamount="2">
 <marquee direction="down" behavior="alternate" scrollamount="3">Chandu Tanu</marquee> <br>
 </marquee>
 
