--- a/add_sub_using_js.html
+++ b/add_sub_using_js.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Tanu Chandu</title>
     <meta name="viewport" content="width=device-width">
-    <meta http-equiv="refresh" content="5">   
+    <meta http-equiv="refresh" content="5">
 
     <style media="screen">
       h1
@@ -74,7 +74,8 @@
           <option value="yellow">Yellow</option>
         </select>
     </header>
-      <p id="online" style="display:left"></p>
+
+  <p id="online" style="display:inline"></p>
       <p id="date" style=" float : right;margin:0% 1%;background:grey;color:white;display:inline"></p>
 
 <marquee direction="right"  behavior="alternate" scrollamount="2">
